fix the footer spacing

--- a/public/stylesheets/sass/footer.scss
+++ b/public/stylesheets/sass/footer.scss
@@ -49,7 +49,7 @@
 }
 
 body {
-    margin-bottom: 300px; // footer height
+    margin-bottom: 260px; // footer height
 }
 @media (max-width: 767px) {
     /* Set the fixed height of the footer here
